* configure.in: Add AC_CHECK_TYPE(ssize_t).  Remove commented 	out check for wchar_t. 	* acconfig.h: Add template for ssize_t.  Remove @TOP@. 	* system.h: Add infrastructure for defining missing 	TYPE_MAX/TYPE_MIN macros.  Use it to provide fallback 	definitions of UCHAR_MAX and SSIZE_MAX. 	* configure: Regenerate. 	* config.in: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34212 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config.in
+++ b/gcc/config.in
@@ -1,29 +1,4 @@
 /* config.in.  Generated automatically from configure.in by autoheader.  */
-/* Define to 1 if NLS is requested.  */
-#undef ENABLE_NLS
-
-/* Define as 1 if you have catgets and don't want to use GNU gettext.  */
-#undef HAVE_CATGETS
-
-/* Define as 1 if you have gettext and don't want to use GNU gettext.  */
-#undef HAVE_GETTEXT
-
-/* Define if your locale.h file contains LC_MESSAGES.  */
-#undef HAVE_LC_MESSAGES
-
-/* Define as 1 if you have the stpcpy function.  */
-#undef HAVE_STPCPY
-
-/* Define if your assembler supports specifying the maximum number
-   of bytes to skip when using the GAS .p2align command. */
-#undef HAVE_GAS_MAX_SKIP_P2ALIGN
-
-/* Define if your assembler supports .balign and .p2align.  */
-#undef HAVE_GAS_BALIGN_AND_P2ALIGN
-
-/* Define if your assembler uses the old HImode fild and fist notation.  */
-#undef HAVE_GAS_FILDS_FISTS
-
 
 /* Define if using alloca.c.  */
 #undef C_ALLOCA
@@ -91,6 +66,34 @@
 
 /* Define vfork as fork if vfork does not work.  */
 #undef vfork
+
+/* Define to 1 if NLS is requested.  */
+#undef ENABLE_NLS
+
+/* Define as 1 if you have catgets and don't want to use GNU gettext.  */
+#undef HAVE_CATGETS
+
+/* Define as 1 if you have gettext and don't want to use GNU gettext.  */
+#undef HAVE_GETTEXT
+
+/* Define if your locale.h file contains LC_MESSAGES.  */
+#undef HAVE_LC_MESSAGES
+
+/* Define as 1 if you have the stpcpy function.  */
+#undef HAVE_STPCPY
+
+/* Define if your assembler supports specifying the maximum number
+   of bytes to skip when using the GAS .p2align command. */
+#undef HAVE_GAS_MAX_SKIP_P2ALIGN
+
+/* Define if your assembler supports .balign and .p2align.  */
+#undef HAVE_GAS_BALIGN_AND_P2ALIGN
+
+/* Define if your assembler uses the old HImode fild and fist notation.  */
+#undef HAVE_GAS_FILDS_FISTS
+
+/* Define to `int' if <sys/types.h> doesn't define.  */
+#undef ssize_t
 
 /* Define if you have the __argz_count function.  */
 #undef HAVE___ARGZ_COUNT
