--- a/libiberty/Makefile.in
+++ b/libiberty/Makefile.in
@@ -272,7 +272,7 @@ getruntime.o: config.h $(INCDIR)/libiberty.h
 hex.o: $(INCDIR)/libiberty.h
 floatformat.o: $(INCDIR)/floatformat.h
 mkstemps.o: config.h
-objalloc.o: $(INCDIR)/objalloc.h
+objalloc.o: config.h $(INCDIR)/objalloc.h
 obstack.o: config.h $(INCDIR)/obstack.h
 partition.o: config.h $(INCDIR)/partition.h
 pexecute.o: config.h $(INCDIR)/libiberty.h
