* Makefile.in (c-decl.o): Depend on rtl.h and expr.h. 	* alias.c (struct alias_entry): alias_set is HOST_WIDE_INT. 	(REG_BASE_VALUE): Remove unneeded cast to unsigned. 	(get_alias_set_entry): ALIAS_SET arg is HOST_WIDE_INT. 	(find_base_decl): New function, from c_find_base_decl in c-common.c. 	(new_alias_set): Moved from tree.c; return is HOST_WIDE_INT. 	(get_alias_set): Likewise. 	Major rework to do more things and allow language-specific code 	to just handle special-cases. 	(record_alias_subset): Args are HOST_WIDE_INT. 	(record_component_alias): Local vars are HOST_WIDE_INT. 	Don't handle COMPLEX_EXPR. 	(get_varargs_alias_set): Moved from builtins.c. 	(get_frame_alias_set): New function. 	* builtins.c (expand_builtin_return_address): Use frame alias set. 	(expand_builtin_setjmp, expand_builtin_longjmp): Use alias set 	for setjmp buffer. 	(get_memory_rtx): Rework to use set_mem_attributes. 	(get_varargs_alias_set): Deleted from here. 	* c-common.c (c_apply_type_quals_to_decl): Alias sets now HOST_WIDE_INT. 	(c_find_base_decl): Deleted from here. 	(c_get_alias_set): Remove many cases and rework to just handle 	C-specific cases. 	* c-common.h (c_get_alias_set): Returns HOST_WIDE_INT. 	* c-decl.c (rtl.h, expr.h): Now included. 	(init_decl_processing): Call record_component_aliases on array types. 	(grokdeclarator): Likewise. 	Set TREE_ADDRESSABLE for all fields that are not bitfields. 	* c-typeck.c (common_type): Call record_component_aliases for array. 	* caller-save.c (setup_save_areas): Rework register loop for unsigned. 	Set all save areas to the frame alias set. 	* calls.c (initialie_argument_information): Call set_mem_attributes. 	(compute_argument_addresses, expand_call): Likewise. 	* explow.c (set_mem_attributes): New function. 	(stabilize): Use MEM_COPY_ATTRIBUTES and force_reg. 	* expr.c (struct move_by_pieces): Remove {to,from}_{struct,readonly}. 	LEN and OFFSET now HOST_WIDE_INT. 	(clear_by_pieces): Similar changes. 	(move_by_pieces): LEN now HOST_WIDE_IN

--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -256,7 +256,7 @@ lex.o : lex.c $(CXX_TREE_H) \
   $(srcdir)/../output.h $(srcdir)/../mbchar.h $(GGC_H) \
   $(srcdir)/../input.h operators.def
 decl.o : decl.c $(CXX_TREE_H) $(srcdir)/../flags.h \
-  lex.h decl.h $(srcdir)/../stack.h $(srcdir)/../output.h  \
+  lex.h decl.h $(srcdir)/../stack.h $(srcdir)/../output.h $(srcdir)/../expr.h \
   $(srcdir)/../except.h $(srcdir)/../toplev.h \
   $(srcdir)/../hash.h $(GGC_H) $(RTL_H) operators.def
 decl2.o : decl2.c $(CXX_TREE_H) $(srcdir)/../flags.h \
