--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -972,7 +972,7 @@ libgcc.mk: config.status Makefile mklibgcc $(LIB2ADD) xgcc$(exeext)
 	  $(SHELL) mklibgcc > tmp-libgcc.mk
 	$(SHELL) $(srcdir)/move-if-change tmp-libgcc.mk libgcc.mk
 
-libgcc.a: libgcc.ready libgcc.mk $(FPBIT) $(DPBIT)
+libgcc.a: libgcc.ready libgcc.mk $(FPBIT) $(DPBIT) $(LIB2ADD)
 	$(MAKE) GCC_FOR_TARGET="$(GCC_FOR_TARGET)" \
 	  HOST_PREFIX="$(HOST_PREFIX)" HOST_PREFIX_1="$(HOST_PREFIX_1)" \
 	  AR_FOR_TARGET="$(AR_FOR_TARGET)" \
