2000-06-01  Pekka Nikander  <pnr@teldanex.tcm.hut.fi>
       * Makefile.in: Use $(MAKE) not "make"


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34376 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2124,7 +2124,7 @@ mostlyclean: $(INTL_MOSTLYCLEAN) lang.mostlyclean
 	  gen-protos fixproto.list fixtmp.* fixhdr.ready
 # Delete files generated for fixincl
 	-rm -rf fixincl fixinc.sh specs.ready
-	(cd fixinc && make clean)
+	(cd fixinc && $(MAKE) clean)
 # Delete unwanted output files from TeX.
 	-rm -f *.toc *.log *.vr *.fn *.cp *.tp *.ky *.pg
 	-rm -f */*.toc */*.log */*.vr */*.fn */*.cp */*.tp */*.ky */*.pg
