* Makefile.in (intl.*): Honor non-zero exit codes in the intl 	subdir.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34393 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1764,6 +1764,7 @@ intl.all intl.install intl.uninstall intl.distdir \
 	  target=`expr $@ : 'intl.\(.*\)'` && \
 	  echo "(cd $$d && $(MAKE) $$target)" && \
 	  (cd $$d && AWK='$(AWK)' $(MAKE) $(SUBDIR_FLAGS_TO_PASS) $$target); \
+	  if [ $$? -eq 0 ] ; then true ; else exit 1 ; fi ; \
 	done
 
 # intl.distdir doesn't copy the intl makefiles (since they aren't distributed),
