--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -176,7 +176,7 @@ INCLUDES = -I. -I.. -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../config -I$(srcdir)
 CXX_OBJS = call.o decl.o errfn.o expr.o pt.o typeck2.o \
  class.o decl2.o error.o lex.o parse.o ptree.o rtti.o spew.o typeck.o cvt.o \
  except.o friend.o init.o method.o search.o semantics.o tree.o xref.o \
- repo.o dump.o optimize.o @extra_cxx_objs@
+ repo.o dump.o optimize.o mangle.o @extra_cxx_objs@
 
 # Language-independent object files.
 OBJS = `cat ../stamp-objlist` ../c-common.o ../c-pragma.o
@@ -311,6 +311,7 @@ dump.o: dump.c $(CXX_TREE_H)
 optimize.o: optimize.c $(CXX_TREE_H) \
   $(srcdir)/../rtl.h $(srcdir)/../integrate.h ../insn-config.h \
   $(srcdir)/../input.h
+mangle.o: mangle.c $(CXX_TREE_H) $(srcdir)/../toplev.h
 
 #
 # These exist for maintenance purposes.
