--- a/libiberty/Makefile.in
+++ b/libiberty/Makefile.in
@@ -125,23 +125,25 @@ HFILES = alloca-conf.h
 # (alphabetical), and add them to REQUIRED_OFILES or funcs in
 # configure.in.
 CFILES = asprintf.c alloca.c argv.c atexit.c basename.c bcmp.c bcopy.c	      \
-	bzero.c calloc.c choose-temp.c clock.c concat.c cplus-dem.c fdmatch.c \
-	fnmatch.c getcwd.c getpwd.c getopt.c getopt1.c getpagesize.c	      \
-	getruntime.c floatformat.c hashtab.c hex.c index.c insque.c memchr.c  \
-	memcmp.c memcpy.c memmove.c memset.c mkstemps.c objalloc.c obstack.c  \
-	partition.c pexecute.c putenv.c random.c rename.c rindex.c	      \
-	setenv.c sigsetmask.c sort.c spaces.c splay-tree.c strcasecmp.c	      \
-	strncasecmp.c strchr.c strdup.c strerror.c strncmp.c strrchr.c	      \
-	strsignal.c strstr.c strtod.c strtol.c strtoul.c tmpnam.c	      \
-	vasprintf.c vfork.c vfprintf.c vprintf.c vsprintf.c waitpid.c	      \
-	xatexit.c xexit.c xmalloc.c xmemdup.c xstrdup.c xstrerror.c
+	bzero.c calloc.c choose-temp.c clock.c concat.c cplus-dem.c	      \
+        cp-demangle.c dyn-string.c fdmatch.c fnmatch.c getcwd.c		      \
+	getpwd.c getopt.c getopt1.c getpagesize.c getruntime.c		      \
+	floatformat.c hashtab.c hex.c index.c insque.c memchr.c memcmp.c      \
+	memcpy.c memmove.c memset.c mkstemps.c objalloc.c obstack.c	      \
+	partition.c pexecute.c putenv.c random.c rename.c rindex.c setenv.c   \
+	sigsetmask.c sort.c spaces.c splay-tree.c strcasecmp.c strncasecmp.c  \
+	strchr.c strdup.c strerror.c strncmp.c strrchr.c strsignal.c strstr.c \
+	strtod.c strtol.c strtoul.c tmpnam.c vasprintf.c vfork.c vfprintf.c   \
+	vprintf.c vsprintf.c waitpid.c xatexit.c xexit.c xmalloc.c	      \
+	xmemdup.c xstrdup.c xstrerror.c
 
 # These are always included in the library.
-REQUIRED_OFILES = argv.o choose-temp.o concat.o cplus-dem.o \
-  fdmatch.o fnmatch.o getopt.o getopt1.o getpwd.o getruntime.o hashtab.o \
-  hex.o floatformat.o objalloc.o obstack.o partition.o pexecute.o sort.o \
-  spaces.o splay-tree.o strerror.o strsignal.o xatexit.o xexit.o xmalloc.o \
-  xmemdup.o xstrdup.o xstrerror.o
+REQUIRED_OFILES = argv.o choose-temp.o concat.o cplus-dem.o cp-demangle.o \
+	dyn-string.o fdmatch.o fnmatch.o getopt.o getopt1.o getpwd.o	  \
+	getruntime.o hashtab.o hex.o floatformat.o objalloc.o obstack.o	  \
+	partition.o pexecute.o sort.o spaces.o splay-tree.o strerror.o	  \
+	strsignal.o xatexit.o xexit.o xmalloc.o xmemdup.o xstrdup.o	  \
+	xstrerror.o
 
 $(TARGETLIB): $(REQUIRED_OFILES) $(EXTRA_OFILES) $(LIBOBJS) $(ALLOCA)
 	rm -f $(TARGETLIB)
@@ -261,6 +263,8 @@ choose-temp.o: config.h
 clock.o: config.h
 concat.o: $(INCDIR)/libiberty.h
 cplus-dem.o: config.h $(INCDIR)/demangle.h
+cp-demangle.o: config.h $(INCDIR)/dyn-string.h
+dyn-string.o: config.h $(INCDIR)/dyn-string.h
 fdmatch.o: $(INCDIR)/libiberty.h
 fnmatch.o: config.h $(INCDIR)/fnmatch.h
 getcwd.o: config.h
