--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -682,18 +682,18 @@ C_AND_OBJC_OBJS = c-lex.o c-pragma.o c-decl.o c-typeck.o c-convert.o \
 C_OBJS = c-parse.o c-lang.o $(C_AND_OBJC_OBJS)
 
 # Language-independent object files.
-OBJS = diagnostic.o \
- toplev.o version.o tree.o print-tree.o stor-layout.o fold-const.o \
- function.o stmt.o except.o expr.o calls.o expmed.o explow.o optabs.o real.o \
- builtins.o intl.o varasm.o rtl.o print-rtl.o rtlanal.o emit-rtl.o genrtl.o \
- dbxout.o sdbout.o dwarfout.o dwarf2out.o xcoffout.o bitmap.o alias.o gcse.o \
- integrate.o jump.o cse.o loop.o unroll.o flow.o combine.o varray.o \
+OBJS = diagnostic.o							      \
+ toplev.o version.o tree.o print-tree.o stor-layout.o fold-const.o	      \
+ function.o stmt.o except.o expr.o calls.o expmed.o explow.o optabs.o real.o  \
+ builtins.o intl.o varasm.o rtl.o print-rtl.o rtlanal.o emit-rtl.o genrtl.o   \
+ dbxout.o sdbout.o dwarfout.o dwarf2out.o xcoffout.o bitmap.o alias.o gcse.o  \
+ integrate.o jump.o cse.o loop.o unroll.o flow.o combine.o varray.o	      \
  regclass.o regmove.o local-alloc.o global.o reload.o reload1.o caller-save.o \
- insn-peep.o reorg.o haifa-sched.o final.o recog.o reg-stack.o regrename.o \
- insn-opinit.o insn-recog.o insn-extract.o insn-output.o insn-emit.o lcm.o \
- profile.o insn-attrtab.o $(out_object_file) $(EXTRA_OBJS) convert.o \
- mbchar.o dyn-string.o splay-tree.o graph.o sbitmap.o resource.o hash.o \
- predict.o lists.o ggc-common.o $(GGC) simplify-rtx.o ssa.o bb-reorder.o \
+ insn-peep.o reorg.o haifa-sched.o final.o recog.o reg-stack.o regrename.o    \
+ insn-opinit.o insn-recog.o insn-extract.o insn-output.o insn-emit.o lcm.o    \
+ profile.o insn-attrtab.o $(out_object_file) $(EXTRA_OBJS) convert.o	      \
+ mbchar.o splay-tree.o graph.o sbitmap.o resource.o hash.o predict.o	      \
+ lists.o ggc-common.o $(GGC) simplify-rtx.o ssa.o bb-reorder.o		      \
  sibcall.o conflict.o timevar.o ifcvt.o
 
 # GEN files are listed separately, so they can be built before doing parallel
@@ -1384,7 +1384,6 @@ recog.o : recog.c $(CONFIG_H) system.h $(RTL_H) function.h $(BASIC_BLOCK_H) \
 reg-stack.o : reg-stack.c $(CONFIG_H) system.h $(RTL_H) $(TREE_H) $(RECOG_H) \
    $(REGS_H) hard-reg-set.h flags.h insn-config.h insn-flags.h toplev.h \
    varray.h function.h
-dyn-string.o: dyn-string.c dyn-string.h $(CONFIG_H) system.h
 predict.o: predict.c $(CONFIG_H) system.h $(RTL_H) $(TREE_H) flags.h \
    insn-config.h $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h \
    $(RECOG_H) insn-flags.h function.h except.h $(EXPR_H)
