* configure.in (Make the links): Typo fix : the file that must be 	included without #ifdef IN_GCC is `auto-host.h', not `auto-config.h'. 	* configure: File rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34431 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -4056,7 +4056,7 @@ do
 
 	for file in `eval echo '$'$var`; do
 		case $file in
-		auto-config.h)
+		auto-host.h)
 			;;
 		*)
 			echo '#ifdef IN_GCC' >>$link
@@ -4064,7 +4064,7 @@ do
 		esac
 		echo "#include \"$file\"" >>$link
 		case $file in
-		auto-config.h)
+		auto-host.h)
 			;;
 		*)
 			echo '#endif' >>$link
