* Makefile.in (cp-demangle.o): Depend on $(INCDIR)/demangle.h.
	* cp-demangle.c: Include demangle.h.
	(template_arg_list_new): DeANSIfy.
	(cp_demangle): Make static and add prototype.
	(operator_code, operators): Constify.
	(demangle_operator_name): Likewise for variables `p1', `p2' and `p'.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34446 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/Makefile.in
+++ b/libiberty/Makefile.in
@@ -263,7 +263,7 @@ choose-temp.o: config.h
 clock.o: config.h
 concat.o: $(INCDIR)/libiberty.h
 cplus-dem.o: config.h $(INCDIR)/demangle.h
-cp-demangle.o: config.h $(INCDIR)/dyn-string.h
+cp-demangle.o: config.h $(INCDIR)/dyn-string.h $(INCDIR)/demangle.h
 dyn-string.o: config.h $(INCDIR)/dyn-string.h
 fdmatch.o: $(INCDIR)/libiberty.h
 fnmatch.o: config.h $(INCDIR)/fnmatch.h
