* configure.in: Check whether gas supports -relax. 	* configure, config.in: Rebuilt. 	* config/sparc/sparc.h (ASM_RELAX_SPEC): Define. 	(EXTRA_SPECS): Add asm_relax. 	(ASM_SPEC): Add %(asm_relax). 	(TARGET_SWITCHES): Add -mrelax and -mno-relax. 	* config/sparc/linux64.h (LINK_ARCH_SPEC): Rename to LINK_SPEC. 	(LINK_SPEC): Pass -relax to linker unless -mno-relax or -r. 	(ASM_SPEC): Add %(asm_relax). 	* config/sparc/linux.h (LINK_SPEC, ASM_SPEC): Likewise. 	* config/sparc/sparc.c (output_sibcall): If HAVE_AS_RELAX_OPTION, 	never use sethi/jmpl for leaf tail calls.  Use or with rs2 %g0 	instead of mov, so that gas can further optimize it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34466 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -4550,6 +4550,25 @@ case "$target" in
 		[Define if your assembler supports .register.])
     fi
 
+    AC_CACHE_CHECK([assembler supports -relax],
+	gcc_cv_as_relax_opt, [
+	gcc_cv_as_relax_opt=unknown
+	if test x$gcc_cv_as != x; then
+	    # Check if gas supports -relax
+	    echo ".text" > conftest.s
+	    if $gcc_cv_as -relax -o conftest.o conftest.s > /dev/null 2>&1; then
+		gcc_cv_as_relax_opt=yes
+	    else
+		gcc_cv_as_relax_opt=no
+	    fi
+	    rm -f conftest.s conftest.o
+	fi
+    ])
+    if test "x$gcc_cv_as_relax_opt" = xyes; then
+	AC_DEFINE(HAVE_AS_RELAX_OPTION, 1,
+		[Define if your assembler supports -relax option.])
+    fi
+
     case "$tm_file" in
     *64*)
 	AC_CACHE_CHECK([for 64 bit support in assembler ($gcc_cv_as)],
