* Makefile.in (c-parse.o): Also depend on output.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34480 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1069,7 +1069,8 @@ s-crt0:	$(CRT0_S) $(MCRT0_S) $(GCC_PASSES) $(CONFIG_H)
 # C language specific files.
 
 c-parse.o : $(srcdir)/c-parse.c $(CONFIG_H) $(TREE_H) c-lex.h $(GGC_H) \
-    $(srcdir)/c-parse.h c-tree.h c-common.h input.h flags.h system.h toplev.h
+    $(srcdir)/c-parse.h c-tree.h c-common.h input.h flags.h system.h \
+    toplev.h output.h
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) -c $(srcdir)/c-parse.c
 $(srcdir)/c-parse.h: $(srcdir)/c-parse.c
 $(srcdir)/c-parse.c: $(srcdir)/c-parse.y
