--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1436,7 +1436,13 @@ changequote([,])dnl
 #		use_collect2=yes
 		;;
 changequote(,)dnl
-	i[34567]86-*-freebsdelf*)
+	i[34567]86-*-freebsd[12] | i[34567]86-*-freebsd[12].* | i[34567]86-*-freebsd*aout*)
+changequote([,])dnl
+		tm_file="i386/freebsd.h i386/perform.h"
+		tmake_file=t-freebsd
+		;;
+changequote(,)dnl
+	i[34567]86-*-freebsd*)
 changequote([,])dnl
 		tm_file="i386/i386.h i386/att.h svr4.h freebsd.h i386/freebsd-elf.h i386/perform.h"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
@@ -1450,12 +1456,6 @@ changequote([,])dnl
 			tmake_file="${tmake_file} t-freebsd-thread"
 			;;
 		esac
-		;;
-changequote(,)dnl
-	i[34567]86-*-freebsd*)
-changequote([,])dnl
-		tm_file="i386/freebsd.h i386/perform.h"
-		tmake_file=t-freebsd
 		;;
 changequote(,)dnl
 	i[34567]86-*-netbsd*)
