gcc: 2000-06-13  Philipp Thomas  <pthomas@suse.de>
	* configure.in(ALL_LINGUAS): Changed en_UK to en_GB.
	* configure: Rebuilt.

gcc/po:

2000-06-13  Philipp Thomas  <pthomas@suse.de>

	* en_UK.po: Renamed to en_GB.po.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34519 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -4104,7 +4104,7 @@ AC_DEFINE_UNQUOTED(VERSION, "$VERSION",
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 
-ALL_LINGUAS="en_UK"
+ALL_LINGUAS="en_GB"
 
 # Enable NLS support by default
 AC_ARG_ENABLE(nls,
