* configure.in: Add AC_TYPE_GETGROUPS test.         * sys-protos.h: Use GETGROUPS_T * for second arg of getgroups.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34524 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -477,6 +477,8 @@ AC_CHECK_FUNCS(strtoul bsearch putenv popen bcopy bzero bcmp \
 
 AC_CHECK_TYPE(ssize_t, int)
 
+AC_TYPE_GETGROUPS
+
 gcc_AC_FUNC_VFPRINTF_DOPRNT
 gcc_AC_FUNC_PRINTF_PTR
 
