--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -189,7 +189,7 @@ ac_rtl_checking=
 ac_gc_checking=
 ac_gc_always_collect=
 case "${enableval}" in
-yes)	ac_checking=1 ; ac_tree_checking=1 ; ac_rtl_checking=1 ;;
+yes)	ac_checking=1 ; ac_tree_checking=1 ; ac_gc_checking=1 ;;
 no)	;;
 *)	IFS="${IFS= 	}"; ac_save_IFS="$IFS" IFS="$IFS,"
 	set fnord $enableval; shift
@@ -207,6 +207,9 @@ no)	;;
 	done
 	;;
 esac
+], 
+# Enable some checks by default for development versions of GCC
+[ac_checking=1; ac_tree_checking=1; ac_gc_checking=1;])
 if test x$ac_checking != x ; then
   AC_DEFINE(ENABLE_CHECKING, 1,
 [Define if you want more run-time sanity checks.  This one gets a grab
@@ -235,7 +238,7 @@ if test x$ac_gc_always_collect != x ; then
    paranoid mode, validating the entire heap and collecting garbage at
    every opportunity.  This is extremely expensive.])
 fi
-])
+
 
 AC_ARG_ENABLE(cpp,
 [  --disable-cpp           don't provide a user-visible C preprocessor.],
